<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.SettingModelActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <com.mikepenz.iconics.view.IconicsImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                app:iiv_color="@android:color/black"
                app:iiv_contour_color="@color/black"
                app:iiv_icon="gmd-arrow-back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/setting_componment"
            android:textSize="20sp"
            android:transitionName="@string/transition_title" />
    </LinearLayout>

    <TextView
        android:id="@+id/modelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/modelModifyText"
        android:textColor="#757575" />

    <com.qmuiteam.qmui.layout.QMUILinearLayout
        android:id="@+id/modelRecyclerViewQMUILinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/modelRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never" />

    </com.qmuiteam.qmui.layout.QMUILinearLayout>


</LinearLayout>